<resources>
    <string name="app_name">FindMyJobCapstone</string>
    <string name="add_to_favourite">Add to Favourite :</string>
    <string name="title">TITLE :</string>
    <string name="description">Description :</string>
    <string name="how_to_apply">How_to_Apply :</string>
    <string name="app_id">ca-app-pub-9602647515351884~8405064865</string>
    <string name="app_id_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Favourite">Favourite</string>
    <string name="sign_out">Sign out</string>
    <string name="location">Location :</string>
    <string name="created_at">Created At :</string>
    <string name="internet_connction">please check internet connection</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="harish">harish</string>
    <string name="msg_db">Message-database.db</string>
    <string name="savedjobs">savedjobs</string>
    <string name="jobs">jobs</string>
    <string name="jobsToast">No Saved Jobs Available</string>
    <string name="contentdesc">Image_loading</string>
    <string name="word_db">word_database</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetaction">android.appwidget.action.APPWIDGET_UPDATE</string>
    <string name="shared">shared</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
