<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/lmargin"
        android:orientation="vertical"
        tools:context=".Main3Activity">


        <ImageView
            android:id="@+id/company_img"
            android:layout_width="match_parent"
            android:contentDescription="@string/contentdesc"
            android:layout_height="@dimen/img_height"
            android:layout_gravity="center"
            android:src="@mipmap/jobshiring" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favourite"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_ts"
            android:textStyle="bold" />

        <com.like.LikeButton
            android:id="@+id/star_button"
            android:layout_width="@dimen/likebutton_width"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/likebutton_ml"
            android:layout_marginTop="@dimen/likebutton_mt"
            app:icon_size="@dimen/iconsize"
            app:icon_type="heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textColor="@color/red_title"
            android:textSize="@dimen/title_ts"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_tv"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textColor="@color/red_title"
            android:textSize="@dimen/title_ts"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:textSize="@dimen/text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/how_to_apply"
            android:textColor="@color/red_title"
            android:textSize="@dimen/title_ts"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/how_to_apply"
            android:textSize="@dimen/text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:textColor="@color/red_title"
            android:textSize="@dimen/title_ts"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/location_tv"
            android:textSize="@dimen/text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/created_at"
            android:textColor="@color/red_title"
            android:textSize="@dimen/title_ts"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/created_at"
            android:textSize="@dimen/text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottommargin"

            />


    </LinearLayout>

</ScrollView>